fixing the overflow and making header fixed

--- a/Styles/style.css
+++ b/Styles/style.css
@@ -14,7 +14,7 @@
     --h2-clr: #000000d5;
 }
 .body {
-    margin: 0 auto; 
+    margin: 3.5rem auto 0; 
     overflow-x: hidden;
 }
 *::selection {
@@ -26,8 +26,9 @@
 header {
     display: grid; grid-template-columns: 20% 55% 25%;
     background-color: #372459;
+    width: 100%;
     padding: 1.7rem 1.2rem;
-    position: sticky; top: 0;
+    position: fixed; top: 0;
     z-index: 1;
 }
 header .title {
